tests/invalid/function_missing_required_keyword_arg/main.py
def add(a: int, b: int) -> int:
    return a + b

if __name__ == "__main__":
    x: int = add(b=2)
